%% OptiTeach ER diagram - GENERATED by database/scripts/export_sql_reference.py
%% from the live schema's foreign keys. Regenerate, don't edit.
erDiagram
    assessments {
        varchar id PK
        varchar course_id FK
        varchar title
        varchar status
    }
    audit_log {
        bigint id PK
        varchar table_name
        varchar operation
    }
    class_sessions {
        varchar id PK
        varchar course_id FK
        integer session_number
        varchar current_topic_id FK
        varchar status
    }
    concept_outcomes {
        varchar concept_id PK,FK
        varchar outcome_id PK,FK
    }
    concepts {
        varchar id PK
        varchar topic_id FK
        varchar name
        integer difficulty
    }
    course_members {
        varchar course_id PK,FK
        varchar teacher_id PK,FK
        varchar role
    }
    course_outcomes {
        varchar id PK
        varchar course_id FK
        varchar code
    }
    courses {
        varchar id PK
        varchar teacher_id FK
        varchar code
        varchar title
        integer total_available_minutes
    }
    lesson_plans {
        varchar id PK
        varchar session_id FK
        varchar topic_id FK
        varchar title
        varchar status
        integer version
    }
    method_effectiveness {
        varchar id PK
        varchar method_id FK
    }
    performance {
        varchar id PK
        varchar concept_id FK
        varchar assessment_id FK
        double_precision average_score
    }
    prerequisites {
        varchar concept_id PK,FK
        varchar prerequisite_id PK,FK
    }
    question_concepts {
        varchar question_id PK,FK
        varchar concept_id PK,FK
    }
    questions {
        varchar id PK
        varchar assessment_id FK
    }
    sections {
        varchar id PK
        varchar course_id FK
        varchar name
    }
    teacher_constraints {
        varchar id PK
        varchar course_id FK
    }
    teacher_preferred_methods {
        varchar constraint_id PK,FK
        varchar method_id PK,FK
        integer rank
    }
    teachers {
        varchar id PK
        varchar user_id FK
    }
    teaching_methods {
        varchar id PK
        varchar name
    }
    teaching_sessions {
        varchar id PK
        varchar session_id FK
        varchar method_id FK
    }
    topics {
        varchar id PK
        varchar unit_id FK
        varchar title
        integer allocated_minutes
        varchar status
    }
    units {
        varchar id PK
        varchar course_id FK
        integer unit_number
        varchar title
    }
    users {
        varchar id PK
        varchar email
        varchar role
    }
    assessments ||--o{ performance : assessment_id
    assessments ||--o{ questions : assessment_id
    class_sessions ||--o| lesson_plans : session_id
    class_sessions ||--o| teaching_sessions : session_id
    concepts ||--o{ concept_outcomes : concept_id
    concepts ||--o{ performance : concept_id
    concepts ||--o{ prerequisites : concept_id
    concepts ||--o{ prerequisites : prerequisite_id
    concepts ||--o{ question_concepts : concept_id
    course_outcomes ||--o{ concept_outcomes : outcome_id
    courses ||--o{ assessments : course_id
    courses ||--o{ class_sessions : course_id
    courses ||--o{ course_members : course_id
    courses ||--o{ course_outcomes : course_id
    courses ||--o{ sections : course_id
    courses ||--o{ units : course_id
    courses ||--o| teacher_constraints : course_id
    questions ||--o{ question_concepts : question_id
    teacher_constraints ||--o{ teacher_preferred_methods : constraint_id
    teachers ||--o{ course_members : teacher_id
    teachers ||--o{ courses : teacher_id
    teaching_methods ||--o{ method_effectiveness : method_id
    teaching_methods ||--o{ teacher_preferred_methods : method_id
    teaching_methods ||--o{ teaching_sessions : method_id
    topics ||--o{ class_sessions : current_topic_id
    topics ||--o{ concepts : topic_id
    topics ||--o{ lesson_plans : topic_id
    units ||--o{ topics : unit_id
    users ||--o| teachers : user_id
